--- a/demo.html
+++ b/demo.html
@@ -71,13 +71,13 @@
 
             switch (String(step)) {
                 case '0':
-                    demoVideoPlayer.setAttribute("src", "./assets/fitness_exercise_action1.mp4");               
+                    demoVideoPlayer.setAttribute("src", "./assets/action1.mp4");               
                     break;
                 case '1':
-                    demoVideoPlayer.setAttribute("src", "./assets/fitness_exercise_action2.mp4");
+                    demoVideoPlayer.setAttribute("src", "./assets/action2.mp4");
                     break;
                 case '2':
-                    demoVideoPlayer.setAttribute("src", "./assets/fitness_exercise_action4.mp4");
+                    demoVideoPlayer.setAttribute("src", "./assets/action3.mp4");
                     break;
                 default:
                     window.location.href = "./home.html ";
